First Last Prev Next    No search results available      Search page      Enter new bug
Bug#: 6362
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Eric Christopher <echristo@apple.com>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: Kaveh Ghazi <ghazi@caip.rutgers.edu>
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 6362 depends on: Show dependency tree
Show dependency graph
Bug 6362 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: Opened: 2002-04-18 09:56
When I run the testsuite with -mips4, I get this additional failure:

 > FAIL: gcc.c-torture/compile/920501-4.c,  -O1  

See: http://gcc.gnu.org/ml/gcc-testresults/2002-04/msg00671.html

When I compile it by hand, I get:
 > xgcc -mips4 -c -O 920501-4.c
 > 920501-4.c: In function `foo':
 > 920501-4.c:49: Internal compiler error in gen_reload_outcc, at insn-emit.c:7493

This failure does not occur with e.g. gcc-2.8.1

Release:
3.1 20020417

Environment:
mips-sgi-irix6.2 native as/ld

------- Comment #1 From Kaveh Ghazi 2002-09-29 08:05 -------
Responsible-Changed-From-To: unassigned->echristo
Responsible-Changed-Why: with permission

------- Comment #2 From Kaveh Ghazi 2002-10-02 06:32 -------
State-Changed-From-To: open->closed
State-Changed-Why: Fixed in 3.3 20021001 by:
    http://gcc.gnu.org/ml/gcc-patches/2002-09/msg01492.html

First Last Prev Next    No search results available      Search page      Enter new bug